--- a/app/GuardianAngel/app/src/main/res/layout/fragment_settings.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/fragment_settings.xml
@@ -43,7 +43,9 @@
                 android:layout_marginEnd="20dp"
                 android:checkable="true"
                 android:clickable="true"
-                android:focusable="true"></ListView>
+                android:focusable="true">
+
+            </ListView>
 
 
         </LinearLayout>
