--- a/app/GuardianAngel/app/src/main/res/layout/remainder_date_picker.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/remainder_date_picker.xml
@@ -7,13 +7,7 @@
     <TimePicker
         android:id="@+id/timePicker"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/timeButton"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="120dp"
-        android:text="Set Remainder" />
+        android:padding="10dp" />
 
 </LinearLayout>
